--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.7.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.4.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.1"
